Maths scores by grade first pass

--- a/PyCitySchools/PyCitySchools.ipynb
+++ b/PyCitySchools/PyCitySchools.ipynb
@@ -822,6 +822,207 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "147fd679",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>student_name</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>grade</th>\n",
+       "      <th>reading_score</th>\n",
+       "      <th>math_score</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>school_name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Bailey High School</th>\n",
+       "      <td>1458</td>\n",
+       "      <td>1458</td>\n",
+       "      <td>1458</td>\n",
+       "      <td>1458</td>\n",
+       "      <td>1458</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cabrera High School</th>\n",
+       "      <td>528</td>\n",
+       "      <td>528</td>\n",
+       "      <td>528</td>\n",
+       "      <td>528</td>\n",
+       "      <td>528</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Figueroa High School</th>\n",
+       "      <td>856</td>\n",
+       "      <td>856</td>\n",
+       "      <td>856</td>\n",
+       "      <td>856</td>\n",
+       "      <td>856</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ford High School</th>\n",
+       "      <td>833</td>\n",
+       "      <td>833</td>\n",
+       "      <td>833</td>\n",
+       "      <td>833</td>\n",
+       "      <td>833</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Griffin High School</th>\n",
+       "      <td>409</td>\n",
+       "      <td>409</td>\n",
+       "      <td>409</td>\n",
+       "      <td>409</td>\n",
+       "      <td>409</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hernandez High School</th>\n",
+       "      <td>1382</td>\n",
+       "      <td>1382</td>\n",
+       "      <td>1382</td>\n",
+       "      <td>1382</td>\n",
+       "      <td>1382</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Holden High School</th>\n",
+       "      <td>127</td>\n",
+       "      <td>127</td>\n",
+       "      <td>127</td>\n",
+       "      <td>127</td>\n",
+       "      <td>127</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Huang High School</th>\n",
+       "      <td>844</td>\n",
+       "      <td>844</td>\n",
+       "      <td>844</td>\n",
+       "      <td>844</td>\n",
+       "      <td>844</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Johnson High School</th>\n",
+       "      <td>1400</td>\n",
+       "      <td>1400</td>\n",
+       "      <td>1400</td>\n",
+       "      <td>1400</td>\n",
+       "      <td>1400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pena High School</th>\n",
+       "      <td>275</td>\n",
+       "      <td>275</td>\n",
+       "      <td>275</td>\n",
+       "      <td>275</td>\n",
+       "      <td>275</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Rodriguez High School</th>\n",
+       "      <td>1164</td>\n",
+       "      <td>1164</td>\n",
+       "      <td>1164</td>\n",
+       "      <td>1164</td>\n",
+       "      <td>1164</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shelton High School</th>\n",
+       "      <td>530</td>\n",
+       "      <td>530</td>\n",
+       "      <td>530</td>\n",
+       "      <td>530</td>\n",
+       "      <td>530</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thomas High School</th>\n",
+       "      <td>461</td>\n",
+       "      <td>461</td>\n",
+       "      <td>461</td>\n",
+       "      <td>461</td>\n",
+       "      <td>461</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wilson High School</th>\n",
+       "      <td>631</td>\n",
+       "      <td>631</td>\n",
+       "      <td>631</td>\n",
+       "      <td>631</td>\n",
+       "      <td>631</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wright High School</th>\n",
+       "      <td>510</td>\n",
+       "      <td>510</td>\n",
+       "      <td>510</td>\n",
+       "      <td>510</td>\n",
+       "      <td>510</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       student_name  gender  grade  reading_score  math_score\n",
+       "school_name                                                                  \n",
+       "Bailey High School             1458    1458   1458           1458        1458\n",
+       "Cabrera High School             528     528    528            528         528\n",
+       "Figueroa High School            856     856    856            856         856\n",
+       "Ford High School                833     833    833            833         833\n",
+       "Griffin High School             409     409    409            409         409\n",
+       "Hernandez High School          1382    1382   1382           1382        1382\n",
+       "Holden High School              127     127    127            127         127\n",
+       "Huang High School               844     844    844            844         844\n",
+       "Johnson High School            1400    1400   1400           1400        1400\n",
+       "Pena High School                275     275    275            275         275\n",
+       "Rodriguez High School          1164    1164   1164           1164        1164\n",
+       "Shelton High School             530     530    530            530         530\n",
+       "Thomas High School              461     461    461            461         461\n",
+       "Wilson High School              631     631    631            631         631\n",
+       "Wright High School              510     510    510            510         510"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Extract scores by grade\n",
+    "maths_9th = students_df.loc[students_df[\"grade\"] == \"9th\", :].groupby(\"school_name\").count()\n",
+    "maths_10th = students_df.loc[students_df[\"grade\"] == \"10th\", :].groupby(\"school_name\").count()\n",
+    "maths_11th = students_df.loc[students_df[\"grade\"] == \"11th\", :].groupby(\"school_name\").count()\n",
+    "maths_12th = students_df.loc[students_df[\"grade\"] == \"12th\", :].groupby(\"school_name\").count()\n",
+    "maths_9th"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a513fa89",
    "metadata": {},
