--- a/PyCitySchools/PyCitySchools.ipynb
+++ b/PyCitySchools/PyCitySchools.ipynb
@@ -823,8 +823,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "id": "147fd679",
+   "execution_count": 91,
+   "id": "77069163",
    "metadata": {},
    "outputs": [
     {
@@ -848,15 +848,13 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>student_name</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>grade</th>\n",
-       "      <th>reading_score</th>\n",
-       "      <th>math_score</th>\n",
+       "      <th>9th grade</th>\n",
+       "      <th>10th grade</th>\n",
+       "      <th>11th grade</th>\n",
+       "      <th>12th grade</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>school_name</th>\n",
-       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -866,160 +864,153 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Bailey High School</th>\n",
-       "      <td>1458</td>\n",
-       "      <td>1458</td>\n",
-       "      <td>1458</td>\n",
-       "      <td>1458</td>\n",
-       "      <td>1458</td>\n",
+       "      <td>77.083676</td>\n",
+       "      <td>76.996772</td>\n",
+       "      <td>77.515588</td>\n",
+       "      <td>76.492218</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Cabrera High School</th>\n",
-       "      <td>528</td>\n",
-       "      <td>528</td>\n",
-       "      <td>528</td>\n",
-       "      <td>528</td>\n",
-       "      <td>528</td>\n",
+       "      <td>83.094697</td>\n",
+       "      <td>83.154506</td>\n",
+       "      <td>82.765560</td>\n",
+       "      <td>83.277487</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Figueroa High School</th>\n",
-       "      <td>856</td>\n",
-       "      <td>856</td>\n",
-       "      <td>856</td>\n",
-       "      <td>856</td>\n",
-       "      <td>856</td>\n",
+       "      <td>76.403037</td>\n",
+       "      <td>76.539974</td>\n",
+       "      <td>76.884344</td>\n",
+       "      <td>77.151369</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Ford High School</th>\n",
-       "      <td>833</td>\n",
-       "      <td>833</td>\n",
-       "      <td>833</td>\n",
-       "      <td>833</td>\n",
-       "      <td>833</td>\n",
+       "      <td>77.361345</td>\n",
+       "      <td>77.672316</td>\n",
+       "      <td>76.918058</td>\n",
+       "      <td>76.179963</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Griffin High School</th>\n",
-       "      <td>409</td>\n",
-       "      <td>409</td>\n",
-       "      <td>409</td>\n",
-       "      <td>409</td>\n",
-       "      <td>409</td>\n",
+       "      <td>82.044010</td>\n",
+       "      <td>84.229064</td>\n",
+       "      <td>83.842105</td>\n",
+       "      <td>83.356164</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Hernandez High School</th>\n",
-       "      <td>1382</td>\n",
-       "      <td>1382</td>\n",
-       "      <td>1382</td>\n",
-       "      <td>1382</td>\n",
-       "      <td>1382</td>\n",
+       "      <td>77.438495</td>\n",
+       "      <td>77.337408</td>\n",
+       "      <td>77.136029</td>\n",
+       "      <td>77.186567</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Holden High School</th>\n",
-       "      <td>127</td>\n",
-       "      <td>127</td>\n",
-       "      <td>127</td>\n",
-       "      <td>127</td>\n",
-       "      <td>127</td>\n",
+       "      <td>83.787402</td>\n",
+       "      <td>83.429825</td>\n",
+       "      <td>85.000000</td>\n",
+       "      <td>82.855422</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Huang High School</th>\n",
-       "      <td>844</td>\n",
-       "      <td>844</td>\n",
-       "      <td>844</td>\n",
-       "      <td>844</td>\n",
-       "      <td>844</td>\n",
+       "      <td>77.027251</td>\n",
+       "      <td>75.908735</td>\n",
+       "      <td>76.446602</td>\n",
+       "      <td>77.225641</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Johnson High School</th>\n",
-       "      <td>1400</td>\n",
-       "      <td>1400</td>\n",
-       "      <td>1400</td>\n",
-       "      <td>1400</td>\n",
-       "      <td>1400</td>\n",
+       "      <td>77.187857</td>\n",
+       "      <td>76.691117</td>\n",
+       "      <td>77.491653</td>\n",
+       "      <td>76.863248</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Pena High School</th>\n",
-       "      <td>275</td>\n",
-       "      <td>275</td>\n",
-       "      <td>275</td>\n",
-       "      <td>275</td>\n",
-       "      <td>275</td>\n",
+       "      <td>83.625455</td>\n",
+       "      <td>83.372000</td>\n",
+       "      <td>84.328125</td>\n",
+       "      <td>84.121547</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Rodriguez High School</th>\n",
-       "      <td>1164</td>\n",
-       "      <td>1164</td>\n",
-       "      <td>1164</td>\n",
-       "      <td>1164</td>\n",
-       "      <td>1164</td>\n",
+       "      <td>76.859966</td>\n",
+       "      <td>76.612500</td>\n",
+       "      <td>76.395626</td>\n",
+       "      <td>77.690748</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Shelton High School</th>\n",
-       "      <td>530</td>\n",
-       "      <td>530</td>\n",
-       "      <td>530</td>\n",
-       "      <td>530</td>\n",
-       "      <td>530</td>\n",
+       "      <td>83.420755</td>\n",
+       "      <td>82.917411</td>\n",
+       "      <td>83.383495</td>\n",
+       "      <td>83.778976</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Thomas High School</th>\n",
-       "      <td>461</td>\n",
-       "      <td>461</td>\n",
-       "      <td>461</td>\n",
-       "      <td>461</td>\n",
-       "      <td>461</td>\n",
+       "      <td>83.590022</td>\n",
+       "      <td>83.087886</td>\n",
+       "      <td>83.498795</td>\n",
+       "      <td>83.497041</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Wilson High School</th>\n",
-       "      <td>631</td>\n",
-       "      <td>631</td>\n",
-       "      <td>631</td>\n",
-       "      <td>631</td>\n",
-       "      <td>631</td>\n",
+       "      <td>83.085578</td>\n",
+       "      <td>83.724422</td>\n",
+       "      <td>83.195326</td>\n",
+       "      <td>83.035794</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Wright High School</th>\n",
-       "      <td>510</td>\n",
-       "      <td>510</td>\n",
-       "      <td>510</td>\n",
-       "      <td>510</td>\n",
-       "      <td>510</td>\n",
+       "      <td>83.264706</td>\n",
+       "      <td>84.010288</td>\n",
+       "      <td>83.836782</td>\n",
+       "      <td>83.644986</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                       student_name  gender  grade  reading_score  math_score\n",
-       "school_name                                                                  \n",
-       "Bailey High School             1458    1458   1458           1458        1458\n",
-       "Cabrera High School             528     528    528            528         528\n",
-       "Figueroa High School            856     856    856            856         856\n",
-       "Ford High School                833     833    833            833         833\n",
-       "Griffin High School             409     409    409            409         409\n",
-       "Hernandez High School          1382    1382   1382           1382        1382\n",
-       "Holden High School              127     127    127            127         127\n",
-       "Huang High School               844     844    844            844         844\n",
-       "Johnson High School            1400    1400   1400           1400        1400\n",
-       "Pena High School                275     275    275            275         275\n",
-       "Rodriguez High School          1164    1164   1164           1164        1164\n",
-       "Shelton High School             530     530    530            530         530\n",
-       "Thomas High School              461     461    461            461         461\n",
-       "Wilson High School              631     631    631            631         631\n",
-       "Wright High School              510     510    510            510         510"
+       "                       9th grade  10th grade  11th grade  12th grade\n",
+       "school_name                                                         \n",
+       "Bailey High School     77.083676   76.996772   77.515588   76.492218\n",
+       "Cabrera High School    83.094697   83.154506   82.765560   83.277487\n",
+       "Figueroa High School   76.403037   76.539974   76.884344   77.151369\n",
+       "Ford High School       77.361345   77.672316   76.918058   76.179963\n",
+       "Griffin High School    82.044010   84.229064   83.842105   83.356164\n",
+       "Hernandez High School  77.438495   77.337408   77.136029   77.186567\n",
+       "Holden High School     83.787402   83.429825   85.000000   82.855422\n",
+       "Huang High School      77.027251   75.908735   76.446602   77.225641\n",
+       "Johnson High School    77.187857   76.691117   77.491653   76.863248\n",
+       "Pena High School       83.625455   83.372000   84.328125   84.121547\n",
+       "Rodriguez High School  76.859966   76.612500   76.395626   77.690748\n",
+       "Shelton High School    83.420755   82.917411   83.383495   83.778976\n",
+       "Thomas High School     83.590022   83.087886   83.498795   83.497041\n",
+       "Wilson High School     83.085578   83.724422   83.195326   83.035794\n",
+       "Wright High School     83.264706   84.010288   83.836782   83.644986"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Extract scores by grade\n",
-    "maths_9th = students_df.loc[students_df[\"grade\"] == \"9th\", :].groupby(\"school_name\").count()\n",
-    "maths_10th = students_df.loc[students_df[\"grade\"] == \"10th\", :].groupby(\"school_name\").count()\n",
-    "maths_11th = students_df.loc[students_df[\"grade\"] == \"11th\", :].groupby(\"school_name\").count()\n",
-    "maths_12th = students_df.loc[students_df[\"grade\"] == \"12th\", :].groupby(\"school_name\").count()\n",
-    "maths_9th"
+    "scores_9th = students_df.loc[students_df[\"grade\"] == \"9th\", :].groupby(\"school_name\").mean()\n",
+    "scores_10th = students_df.loc[students_df[\"grade\"] == \"10th\", :].groupby(\"school_name\").mean()\n",
+    "scores_11th = students_df.loc[students_df[\"grade\"] == \"11th\", :].groupby(\"school_name\").mean()\n",
+    "scores_12th = students_df.loc[students_df[\"grade\"] == \"12th\", :].groupby(\"school_name\").mean()\n",
+    "\n",
+    "#Define maths dataframe\n",
+    "maths_df = pd.DataFrame( {\n",
+    "                    \"9th grade\": scores_9th[\"math_score\"],\n",
+    "                    \"10th grade\": scores_10th[\"math_score\"],\n",
+    "                    \"11th grade\": scores_11th[\"math_score\"],\n",
+    "                    \"12th grade\": scores_12th[\"math_score\"]\n",
+    "})\n",
+    "maths_df"
    ]
   },
   {
@@ -1029,6 +1020,192 @@
    "source": [
     "Reading scores by grade\n",
     "-----------------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "a0edd4d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>9th grade</th>\n",
+       "      <th>10th grade</th>\n",
+       "      <th>11th grade</th>\n",
+       "      <th>12th grade</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>school_name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Bailey High School</th>\n",
+       "      <td>81.303155</td>\n",
+       "      <td>80.907183</td>\n",
+       "      <td>80.945643</td>\n",
+       "      <td>80.912451</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cabrera High School</th>\n",
+       "      <td>83.676136</td>\n",
+       "      <td>84.253219</td>\n",
+       "      <td>83.788382</td>\n",
+       "      <td>84.287958</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Figueroa High School</th>\n",
+       "      <td>81.198598</td>\n",
+       "      <td>81.408912</td>\n",
+       "      <td>80.640339</td>\n",
+       "      <td>81.384863</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ford High School</th>\n",
+       "      <td>80.632653</td>\n",
+       "      <td>81.262712</td>\n",
+       "      <td>80.403642</td>\n",
+       "      <td>80.662338</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Griffin High School</th>\n",
+       "      <td>83.369193</td>\n",
+       "      <td>83.706897</td>\n",
+       "      <td>84.288089</td>\n",
+       "      <td>84.013699</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hernandez High School</th>\n",
+       "      <td>80.866860</td>\n",
+       "      <td>80.660147</td>\n",
+       "      <td>81.396140</td>\n",
+       "      <td>80.857143</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Holden High School</th>\n",
+       "      <td>83.677165</td>\n",
+       "      <td>83.324561</td>\n",
+       "      <td>83.815534</td>\n",
+       "      <td>84.698795</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Huang High School</th>\n",
+       "      <td>81.290284</td>\n",
+       "      <td>81.512386</td>\n",
+       "      <td>81.417476</td>\n",
+       "      <td>80.305983</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Johnson High School</th>\n",
+       "      <td>81.260714</td>\n",
+       "      <td>80.773431</td>\n",
+       "      <td>80.616027</td>\n",
+       "      <td>81.227564</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pena High School</th>\n",
+       "      <td>83.807273</td>\n",
+       "      <td>83.612000</td>\n",
+       "      <td>84.335938</td>\n",
+       "      <td>84.591160</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Rodriguez High School</th>\n",
+       "      <td>80.993127</td>\n",
+       "      <td>80.629808</td>\n",
+       "      <td>80.864811</td>\n",
+       "      <td>80.376426</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shelton High School</th>\n",
+       "      <td>84.122642</td>\n",
+       "      <td>83.441964</td>\n",
+       "      <td>84.373786</td>\n",
+       "      <td>82.781671</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thomas High School</th>\n",
+       "      <td>83.728850</td>\n",
+       "      <td>84.254157</td>\n",
+       "      <td>83.585542</td>\n",
+       "      <td>83.831361</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wilson High School</th>\n",
+       "      <td>83.939778</td>\n",
+       "      <td>84.021452</td>\n",
+       "      <td>83.764608</td>\n",
+       "      <td>84.317673</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wright High School</th>\n",
+       "      <td>83.833333</td>\n",
+       "      <td>83.812757</td>\n",
+       "      <td>84.156322</td>\n",
+       "      <td>84.073171</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       9th grade  10th grade  11th grade  12th grade\n",
+       "school_name                                                         \n",
+       "Bailey High School     81.303155   80.907183   80.945643   80.912451\n",
+       "Cabrera High School    83.676136   84.253219   83.788382   84.287958\n",
+       "Figueroa High School   81.198598   81.408912   80.640339   81.384863\n",
+       "Ford High School       80.632653   81.262712   80.403642   80.662338\n",
+       "Griffin High School    83.369193   83.706897   84.288089   84.013699\n",
+       "Hernandez High School  80.866860   80.660147   81.396140   80.857143\n",
+       "Holden High School     83.677165   83.324561   83.815534   84.698795\n",
+       "Huang High School      81.290284   81.512386   81.417476   80.305983\n",
+       "Johnson High School    81.260714   80.773431   80.616027   81.227564\n",
+       "Pena High School       83.807273   83.612000   84.335938   84.591160\n",
+       "Rodriguez High School  80.993127   80.629808   80.864811   80.376426\n",
+       "Shelton High School    84.122642   83.441964   84.373786   82.781671\n",
+       "Thomas High School     83.728850   84.254157   83.585542   83.831361\n",
+       "Wilson High School     83.939778   84.021452   83.764608   84.317673\n",
+       "Wright High School     83.833333   83.812757   84.156322   84.073171"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Define maths dataframe\n",
+    "reading_df = pd.DataFrame( {\n",
+    "                    \"9th grade\": scores_9th[\"reading_score\"],\n",
+    "                    \"10th grade\": scores_10th[\"reading_score\"],\n",
+    "                    \"11th grade\": scores_11th[\"reading_score\"],\n",
+    "                    \"12th grade\": scores_12th[\"reading_score\"]\n",
+    "})\n",
+    "reading_df"
    ]
   },
   {
