--- a/PyCitySchools/PyCitySchools.ipynb
+++ b/PyCitySchools/PyCitySchools.ipynb
@@ -150,7 +150,7 @@
    "id": "7ba66f42",
    "metadata": {},
    "source": [
-    "Primary analysis\n",
+    "Summaries\n",
     "================"
    ]
   },
@@ -277,10 +277,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 94,
    "id": "2c79fa1e",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       Total Students  Total School Budget  Per Student Budget  \\\n",
+      "count       15.000000         1.500000e+01           15.000000   \n",
+      "mean      2611.333333         1.643295e+06          620.066667   \n",
+      "std       1420.915282         9.347763e+05           28.544368   \n",
+      "min        427.000000         2.480870e+05          578.000000   \n",
+      "25%       1698.000000         1.046265e+06          591.500000   \n",
+      "50%       2283.000000         1.319574e+06          628.000000   \n",
+      "75%       3474.000000         2.228999e+06          641.500000   \n",
+      "max       4976.000000         3.124928e+06          655.000000   \n",
+      "\n",
+      "       Average maths score  Average reading score  \n",
+      "count            15.000000              15.000000  \n",
+      "mean             80.432530              82.529188  \n",
+      "std               3.374548               1.519329  \n",
+      "min              76.629414              80.744686  \n",
+      "25%              77.060448              81.000178  \n",
+      "50%              83.061895              83.725724  \n",
+      "75%              83.388902              83.901965  \n",
+      "max              83.839917              84.044699  \n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -502,7 +527,7 @@
        "14               583.0            83.682222              83.955000  "
       ]
      },
-     "execution_count": 77,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,6 +567,7 @@
     "                     \"Average maths score\": school_average_maths, \"Average reading score\": school_average_reading})\n",
     "school_summary = school_summary.reset_index()\n",
     "school_summary = school_summary.rename(columns={\"school_name\": \"School Name\", \"type\": \"Type\"})\n",
+    "print(school_summary.describe())\n",
     "school_summary"
    ]
   },
@@ -824,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "77069163",
+   "id": "03cf351e",
    "metadata": {},
    "outputs": [
     {
@@ -1025,7 +1051,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "a0edd4d8",
+   "id": "74a167a4",
    "metadata": {},
    "outputs": [
     {
@@ -1219,18 +1245,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "id": "8a9ab9b2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\mail\\AppData\\Local\\Temp/ipykernel_24512/3718175554.py:10: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  spending_data[\"Spending bin\"] = pd.cut(spending_data[\"Per Student Budget\"], bins=spending_bins, labels=spending_bin_names, include_lowest=True)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average maths score</th>\n",
+       "      <th>Average reading score</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Spending bin</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>&lt;$590</th>\n",
+       "      <td>581.00</td>\n",
+       "      <td>83.455399</td>\n",
+       "      <td>83.933814</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$590-$630</th>\n",
+       "      <td>615.50</td>\n",
+       "      <td>81.899826</td>\n",
+       "      <td>83.155286</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>£630-$640</th>\n",
+       "      <td>638.00</td>\n",
+       "      <td>78.990942</td>\n",
+       "      <td>81.917212</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>&gt;$640</th>\n",
+       "      <td>650.25</td>\n",
+       "      <td>77.023555</td>\n",
+       "      <td>80.957446</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Per Student Budget  Average maths score  Average reading score\n",
+       "Spending bin                                                                \n",
+       "<$590                     581.00            83.455399              83.933814\n",
+       "$590-$630                 615.50            81.899826              83.155286\n",
+       "£630-$640                 638.00            78.990942              81.917212\n",
+       ">$640                     650.25            77.023555              80.957446"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Define bins\n",
-    "\n",
+    "#Bins based on quartiles, rounded to nearest ten dollars\n",
+    "spending_bins = [0, 590, 630, 640, 1000]\n",
+    "spending_bin_names = [\"<$590\", \"$590-$630\", \"£630-$640\", \">$640\"]\n",
     "\n",
     "#Select data\n",
+    "spending_data = school_summary[[\"Per Student Budget\", \"Average maths score\", \"Average reading score\"]] \n",
     "\n",
-    "\n",
-    "#Bin data"
+    "#Bin data\n",
+    "spending_data[\"Spending bin\"] = pd.cut(spending_data[\"Per Student Budget\"], bins=spending_bins, labels=spending_bin_names, include_lowest=True)\n",
+    "spending_data_binned = spending_data.groupby(\"Spending bin\").mean()\n",
+    "spending_data_binned"
    ]
   },
   {
