Added scored by school size

--- a/PyCitySchools/PyCitySchools.ipynb
+++ b/PyCitySchools/PyCitySchools.ipynb
@@ -850,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "03cf351e",
+   "id": "e385a1a1",
    "metadata": {},
    "outputs": [
     {
@@ -1051,7 +1051,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "74a167a4",
+   "id": "1c6f19ec",
    "metadata": {},
    "outputs": [
     {
@@ -1245,7 +1245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 102,
    "id": "8a9ab9b2",
    "metadata": {},
    "outputs": [
@@ -1253,7 +1253,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\mail\\AppData\\Local\\Temp/ipykernel_24512/3718175554.py:10: SettingWithCopyWarning: \n",
+      "C:\\Users\\mail\\AppData\\Local\\Temp/ipykernel_24512/3821100716.py:10: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1282,7 +1282,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Per Student Budget</th>\n",
        "      <th>Average maths score</th>\n",
        "      <th>Average reading score</th>\n",
        "    </tr>\n",
@@ -1290,31 +1289,26 @@
        "      <th>Spending bin</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>&lt;$590</th>\n",
-       "      <td>581.00</td>\n",
        "      <td>83.455399</td>\n",
        "      <td>83.933814</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>$590-$630</th>\n",
-       "      <td>615.50</td>\n",
        "      <td>81.899826</td>\n",
        "      <td>83.155286</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>£630-$640</th>\n",
-       "      <td>638.00</td>\n",
        "      <td>78.990942</td>\n",
        "      <td>81.917212</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>&gt;$640</th>\n",
-       "      <td>650.25</td>\n",
        "      <td>77.023555</td>\n",
        "      <td>80.957446</td>\n",
        "    </tr>\n",
@@ -1323,15 +1317,15 @@
        "</div>"
       ],
       "text/plain": [
-       "              Per Student Budget  Average maths score  Average reading score\n",
-       "Spending bin                                                                \n",
-       "<$590                     581.00            83.455399              83.933814\n",
-       "$590-$630                 615.50            81.899826              83.155286\n",
-       "£630-$640                 638.00            78.990942              81.917212\n",
-       ">$640                     650.25            77.023555              80.957446"
+       "              Average maths score  Average reading score\n",
+       "Spending bin                                            \n",
+       "<$590                   83.455399              83.933814\n",
+       "$590-$630               81.899826              83.155286\n",
+       "£630-$640               78.990942              81.917212\n",
+       ">$640                   77.023555              80.957446"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1348,7 +1342,8 @@
     "#Bin data\n",
     "spending_data[\"Spending bin\"] = pd.cut(spending_data[\"Per Student Budget\"], bins=spending_bins, labels=spending_bin_names, include_lowest=True)\n",
     "spending_data_binned = spending_data.groupby(\"Spending bin\").mean()\n",
-    "spending_data_binned"
+    "spending_data_binned = spending_data_binned.drop(\"Per Student Budget\", axis=1)\n",
+    "spending_data_binned "
    ]
   },
   {
@@ -1362,18 +1357,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "id": "94a82d40",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\mail\\AppData\\Local\\Temp/ipykernel_24512/3916055019.py:10: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  size_data[\"Size bin\"] = pd.cut(size_data[\"Total Students\"], bins=size_bins, labels=size_bin_names, include_lowest=True)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average maths score</th>\n",
+       "      <th>Average reading score</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Size bin</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>&lt;1750</th>\n",
+       "      <td>83.603261</td>\n",
+       "      <td>83.881343</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1750-2250</th>\n",
+       "      <td>83.367857</td>\n",
+       "      <td>83.885501</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2250-3500</th>\n",
+       "      <td>78.429493</td>\n",
+       "      <td>81.769122</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>&gt;3500</th>\n",
+       "      <td>77.063340</td>\n",
+       "      <td>80.919864</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Average maths score  Average reading score\n",
+       "Size bin                                             \n",
+       "<1750                83.603261              83.881343\n",
+       "1750-2250            83.367857              83.885501\n",
+       "2250-3500            78.429493              81.769122\n",
+       ">3500                77.063340              80.919864"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Define bins\n",
-    "\n",
+    "#Bins based on quartiles, rounded to nearest 250\n",
+    "size_bins = [0, 1750, 2250, 3500, 10000]\n",
+    "size_bin_names = [\"<1750\", \"1750-2250\", \"2250-3500\", \">3500\"]\n",
     "\n",
     "#Select data\n",
+    "size_data = school_summary[[\"Total Students\", \"Average maths score\", \"Average reading score\"]] \n",
     "\n",
-    "\n",
-    "#Bin data"
+    "#Bin data\n",
+    "size_data[\"Size bin\"] = pd.cut(size_data[\"Total Students\"], bins=size_bins, labels=size_bin_names, include_lowest=True)\n",
+    "size_data_binned = size_data.groupby(\"Size bin\").mean()\n",
+    "size_data_binned = size_data_binned.drop(\"Total Students\", axis=1)\n",
+    "size_data_binned "
    ]
   },
   {
