--- a/PyCitySchools/PyCitySchools.ipynb
+++ b/PyCitySchools/PyCitySchools.ipynb
@@ -850,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "e385a1a1",
+   "id": "7a1a68cf",
    "metadata": {},
    "outputs": [
     {
@@ -1051,7 +1051,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "1c6f19ec",
+   "id": "6472b672",
    "metadata": {},
    "outputs": [
     {
@@ -1469,18 +1469,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "id": "185ff32e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average maths score</th>\n",
+       "      <th>Average reading score</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.473852</td>\n",
+       "      <td>83.896421</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>76.956733</td>\n",
+       "      <td>80.966636</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Average maths score  Average reading score\n",
+       "Type                                                \n",
+       "Charter             83.473852              83.896421\n",
+       "District            76.956733              80.966636"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Define bins\n",
-    "\n",
-    "\n",
-    "#Select data\n",
-    "\n",
-    "\n",
-    "#Bin data"
+    "type_data = school_summary[[\"Type\", \"Average maths score\", \"Average reading score\"]]\n",
+    "type_binned = type_data.groupby(\"Type\").mean()\n",
+    "type_binned"
    ]
   },
   {
