--- a/PyCitySchools/PyCitySchools.ipynb
+++ b/PyCitySchools/PyCitySchools.ipynb
@@ -1437,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "id": "8a9ab9b2",
    "metadata": {},
    "outputs": [
@@ -1480,35 +1480,35 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>&lt;$590</th>\n",
-       "      <td>83.455399</td>\n",
-       "      <td>83.933814</td>\n",
-       "      <td>93.460096</td>\n",
-       "      <td>96.610877</td>\n",
-       "      <td>90.369459</td>\n",
+       "      <td>83.46</td>\n",
+       "      <td>83.93</td>\n",
+       "      <td>93.46</td>\n",
+       "      <td>96.61</td>\n",
+       "      <td>90.37</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>\\$590-$630</th>\n",
-       "      <td>81.899826</td>\n",
-       "      <td>83.155286</td>\n",
-       "      <td>87.133538</td>\n",
-       "      <td>92.718205</td>\n",
-       "      <td>81.418596</td>\n",
+       "      <td>81.90</td>\n",
+       "      <td>83.16</td>\n",
+       "      <td>87.13</td>\n",
+       "      <td>92.72</td>\n",
+       "      <td>81.42</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>\\$630-$640</th>\n",
-       "      <td>78.990942</td>\n",
-       "      <td>81.917212</td>\n",
-       "      <td>75.209078</td>\n",
-       "      <td>86.089386</td>\n",
-       "      <td>65.713578</td>\n",
+       "      <td>78.99</td>\n",
+       "      <td>81.92</td>\n",
+       "      <td>75.21</td>\n",
+       "      <td>86.09</td>\n",
+       "      <td>65.71</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>&gt;$640</th>\n",
-       "      <td>77.023555</td>\n",
-       "      <td>80.957446</td>\n",
-       "      <td>66.701010</td>\n",
-       "      <td>80.675217</td>\n",
-       "      <td>53.717613</td>\n",
+       "      <td>77.02</td>\n",
+       "      <td>80.96</td>\n",
+       "      <td>66.70</td>\n",
+       "      <td>80.68</td>\n",
+       "      <td>53.72</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1517,20 +1517,20 @@
       "text/plain": [
        "              Average maths score  Average reading score  % Passing maths  \\\n",
        "Spending bin                                                                \n",
-       "<$590                   83.455399              83.933814        93.460096   \n",
-       "\\$590-$630              81.899826              83.155286        87.133538   \n",
-       "\\$630-$640              78.990942              81.917212        75.209078   \n",
-       ">$640                   77.023555              80.957446        66.701010   \n",
+       "<$590                       83.46                  83.93            93.46   \n",
+       "\\$590-$630                  81.90                  83.16            87.13   \n",
+       "\\$630-$640                  78.99                  81.92            75.21   \n",
+       ">$640                       77.02                  80.96            66.70   \n",
        "\n",
        "              % Passing reading  % Overall Passing  \n",
        "Spending bin                                        \n",
-       "<$590                 96.610877          90.369459  \n",
-       "\\$590-$630            92.718205          81.418596  \n",
-       "\\$630-$640            86.089386          65.713578  \n",
-       ">$640                 80.675217          53.717613  "
+       "<$590                     96.61              90.37  \n",
+       "\\$590-$630                92.72              81.42  \n",
+       "\\$630-$640                86.09              65.71  \n",
+       ">$640                     80.68              53.72  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1555,6 +1555,11 @@
     "spending_data[\"Spending bin\"] = pd.cut(spending_data[\"Per Student Budget\"], bins=spending_bins, labels=spending_bin_names, include_lowest=True)\n",
     "spending_data_binned = spending_data.groupby(\"Spending bin\").mean()\n",
     "spending_data_binned = spending_data_binned.drop(\"Per Student Budget\", axis=1)\n",
+    "spending_data_binned[\"Average maths score\"] = spending_data_binned[\"Average maths score\"].round(2)\n",
+    "spending_data_binned[\"Average reading score\"] = spending_data_binned[\"Average reading score\"].round(2)\n",
+    "spending_data_binned[\"% Passing maths\"] = spending_data_binned[\"% Passing maths\"].round(2)\n",
+    "spending_data_binned[\"% Passing reading\"] = spending_data_binned[\"% Passing reading\"].round(2)\n",
+    "spending_data_binned[\"% Overall Passing\"] = spending_data_binned[\"% Overall Passing\"].round(2)\n",
     "spending_data_binned "
    ]
   },
