--- a/PyCitySchools/PyCitySchools.ipynb
+++ b/PyCitySchools/PyCitySchools.ipynb
@@ -1574,7 +1574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "id": "94a82d40",
    "metadata": {},
    "outputs": [
@@ -1616,67 +1616,56 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>&lt;1750</th>\n",
-       "      <td>83.603261</td>\n",
-       "      <td>83.881343</td>\n",
-       "      <td>93.441248</td>\n",
-       "      <td>96.661677</td>\n",
-       "      <td>90.328794</td>\n",
+       "      <th>Small (&lt;1000)</th>\n",
+       "      <td>83.821598</td>\n",
+       "      <td>83.929843</td>\n",
+       "      <td>93.550225</td>\n",
+       "      <td>96.099437</td>\n",
+       "      <td>89.883853</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1750-2250</th>\n",
-       "      <td>83.367857</td>\n",
-       "      <td>83.885501</td>\n",
-       "      <td>93.777977</td>\n",
-       "      <td>96.501856</td>\n",
-       "      <td>90.520070</td>\n",
+       "      <th>Medium (1000-2000)</th>\n",
+       "      <td>83.374684</td>\n",
+       "      <td>83.864438</td>\n",
+       "      <td>93.599695</td>\n",
+       "      <td>96.790680</td>\n",
+       "      <td>90.621535</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2250-3500</th>\n",
-       "      <td>78.429493</td>\n",
-       "      <td>81.769122</td>\n",
-       "      <td>73.462428</td>\n",
-       "      <td>84.473577</td>\n",
-       "      <td>62.897703</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>&gt;3500</th>\n",
-       "      <td>77.063340</td>\n",
-       "      <td>80.919864</td>\n",
-       "      <td>66.464293</td>\n",
-       "      <td>81.059691</td>\n",
-       "      <td>53.674303</td>\n",
+       "      <th>Large (2000-5000)</th>\n",
+       "      <td>77.746417</td>\n",
+       "      <td>81.344493</td>\n",
+       "      <td>69.963361</td>\n",
+       "      <td>82.766634</td>\n",
+       "      <td>58.286003</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             Average maths score  Average reading score  % Passing maths  \\\n",
-       "School size                                                                \n",
-       "<1750                  83.603261              83.881343        93.441248   \n",
-       "1750-2250              83.367857              83.885501        93.777977   \n",
-       "2250-3500              78.429493              81.769122        73.462428   \n",
-       ">3500                  77.063340              80.919864        66.464293   \n",
+       "                    Average maths score  Average reading score  \\\n",
+       "School size                                                      \n",
+       "Small (<1000)                 83.821598              83.929843   \n",
+       "Medium (1000-2000)            83.374684              83.864438   \n",
+       "Large (2000-5000)             77.746417              81.344493   \n",
        "\n",
-       "             % Passing reading  % Overall Passing  \n",
-       "School size                                        \n",
-       "<1750                96.661677          90.328794  \n",
-       "1750-2250            96.501856          90.520070  \n",
-       "2250-3500            84.473577          62.897703  \n",
-       ">3500                81.059691          53.674303  "
+       "                    % Passing maths  % Passing reading  % Overall Passing  \n",
+       "School size                                                                \n",
+       "Small (<1000)             93.550225          96.099437          89.883853  \n",
+       "Medium (1000-2000)        93.599695          96.790680          90.621535  \n",
+       "Large (2000-5000)         69.963361          82.766634          58.286003  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Define bins\n",
-    "#Bins based on quartiles, rounded to nearest 250\n",
-    "size_bins = [0, 1750, 2250, 3500, 10000]\n",
-    "size_bin_names = [\"<1750\", \"1750-2250\", \"2250-3500\", \">3500\"]\n",
+    "size_bins = [0, 1000, 2000, 5000]\n",
+    "size_bin_names = [\"Small (<1000)\", \"Medium (1000-2000)\", \"Large (2000-5000)\"]\n",
     "\n",
     "#Select data\n",
     "size_data = pd.DataFrame(\n",
@@ -1794,6 +1783,21 @@
    "source": [
     "Reporting\n",
     "========="
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f4cfea6",
+   "metadata": {},
+   "source": [
+    "The analysis of the data shows a number of trends, including:\n",
+    "\n",
+    "1. Charter schools tend to perform better than District schools\n",
+    "    - Charter schools average scores are higher than District schools\n",
+    "    - The top 5 performing schools are Charter, the bottom five are District\n",
+    "2. School size has an impact - smaller schools have higher average grades, especially in maths\n",
+    "3. Per student budget has an inverse effect, which is not expected. This should be correlated with school size to be understood.\n",
+    "4. There are no obvious trends in pass marks by grade\n"
    ]
   }
  ],
