--- a/PyCitySchools/PyCitySchools.ipynb
+++ b/PyCitySchools/PyCitySchools.ipynb
@@ -330,7 +330,7 @@
        "      <th>Type</th>\n",
        "      <th>Total Students</th>\n",
        "      <th>Total School Budget</th>\n",
-       "      <th>Student Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
        "      <th>Average maths score</th>\n",
        "      <th>Average reading score</th>\n",
        "      <th>% Passing maths</th>\n",
@@ -554,23 +554,23 @@
        "Wilson High School      Charter            2283       $1,319,574.00   \n",
        "Wright High School      Charter            1800       $1,049,400.00   \n",
        "\n",
-       "                      Student Budget  Average maths score  \\\n",
-       "school_name                                                 \n",
-       "Bailey High School           $628.00            77.048432   \n",
-       "Cabrera High School          $582.00            83.061895   \n",
-       "Figueroa High School         $639.00            76.711767   \n",
-       "Ford High School             $644.00            77.102592   \n",
-       "Griffin High School          $625.00            83.351499   \n",
-       "Hernandez High School        $652.00            77.289752   \n",
-       "Holden High School           $581.00            83.803279   \n",
-       "Huang High School            $655.00            76.629414   \n",
-       "Johnson High School          $650.00            77.072464   \n",
-       "Pena High School             $609.00            83.839917   \n",
-       "Rodriguez High School        $637.00            76.842711   \n",
-       "Shelton High School          $600.00            83.359455   \n",
-       "Thomas High School           $638.00            83.418349   \n",
-       "Wilson High School           $578.00            83.274201   \n",
-       "Wright High School           $583.00            83.682222   \n",
+       "                      Per Student Budget  Average maths score  \\\n",
+       "school_name                                                     \n",
+       "Bailey High School               $628.00            77.048432   \n",
+       "Cabrera High School              $582.00            83.061895   \n",
+       "Figueroa High School             $639.00            76.711767   \n",
+       "Ford High School                 $644.00            77.102592   \n",
+       "Griffin High School              $625.00            83.351499   \n",
+       "Hernandez High School            $652.00            77.289752   \n",
+       "Holden High School               $581.00            83.803279   \n",
+       "Huang High School                $655.00            76.629414   \n",
+       "Johnson High School              $650.00            77.072464   \n",
+       "Pena High School                 $609.00            83.839917   \n",
+       "Rodriguez High School            $637.00            76.842711   \n",
+       "Shelton High School              $600.00            83.359455   \n",
+       "Thomas High School               $638.00            83.418349   \n",
+       "Wilson High School               $578.00            83.274201   \n",
+       "Wright High School               $583.00            83.682222   \n",
        "\n",
        "                       Average reading score  % Passing maths  \\\n",
        "school_name                                                     \n",
@@ -653,7 +653,7 @@
     "#Create dataframe\n",
     "school_summary = pd.DataFrame(\n",
     "                    {\"Total Students\": school_students, \n",
-    "                     \"Total School Budget\": school_budget, \"Student Budget\": school_student_budget,\n",
+    "                     \"Total School Budget\": school_budget, \"Per Student Budget\": school_student_budget,\n",
     "                     \"Average maths score\": school_average_maths, \"Average reading score\": school_average_reading,\n",
     "                     \"% Passing maths\": school_pass_maths, \"% Passing reading\": school_pass_reading, \n",
     "                     \"% Overall Passing\": school_pass_overall})\n",
@@ -664,7 +664,7 @@
     "\n",
     "#Adjust format of budget cells\n",
     "school_summary[\"Total School Budget\"] = school_summary[\"Total School Budget\"].map(\"${:,.2f}\".format)\n",
-    "school_summary[\"Student Budget\"] = school_summary[\"Student Budget\"].map(\"${:,.2f}\".format)\n",
+    "school_summary[\"Per Student Budget\"] = school_summary[\"Per Student Budget\"].map(\"${:,.2f}\".format)\n",
     "\n",
     "print(school_summary.describe())\n",
     "school_summary"
@@ -709,7 +709,7 @@
        "      <th>Type</th>\n",
        "      <th>Total Students</th>\n",
        "      <th>Total School Budget</th>\n",
-       "      <th>Student Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
        "      <th>Average maths score</th>\n",
        "      <th>Average reading score</th>\n",
        "      <th>% Passing maths</th>\n",
@@ -803,13 +803,13 @@
        "Wilson High School   Charter            2283       $1,319,574.00   \n",
        "Pena High School     Charter             962         $585,858.00   \n",
        "\n",
-       "                    Student Budget  Average maths score  \\\n",
-       "school_name                                               \n",
-       "Cabrera High School        $582.00            83.061895   \n",
-       "Thomas High School         $638.00            83.418349   \n",
-       "Griffin High School        $625.00            83.351499   \n",
-       "Wilson High School         $578.00            83.274201   \n",
-       "Pena High School           $609.00            83.839917   \n",
+       "                    Per Student Budget  Average maths score  \\\n",
+       "school_name                                                   \n",
+       "Cabrera High School            $582.00            83.061895   \n",
+       "Thomas High School             $638.00            83.418349   \n",
+       "Griffin High School            $625.00            83.351499   \n",
+       "Wilson High School             $578.00            83.274201   \n",
+       "Pena High School               $609.00            83.839917   \n",
        "\n",
        "                     Average reading score  % Passing maths  \\\n",
        "school_name                                                   \n",
@@ -880,7 +880,7 @@
        "      <th>Type</th>\n",
        "      <th>Total Students</th>\n",
        "      <th>Total School Budget</th>\n",
-       "      <th>Student Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
        "      <th>Average maths score</th>\n",
        "      <th>Average reading score</th>\n",
        "      <th>% Passing maths</th>\n",
@@ -974,13 +974,13 @@
        "Hernandez High School  District            4635       $3,022,020.00   \n",
        "Johnson High School    District            4761       $3,094,650.00   \n",
        "\n",
-       "                      Student Budget  Average maths score  \\\n",
-       "school_name                                                 \n",
-       "Rodriguez High School        $637.00            76.842711   \n",
-       "Figueroa High School         $639.00            76.711767   \n",
-       "Huang High School            $655.00            76.629414   \n",
-       "Hernandez High School        $652.00            77.289752   \n",
-       "Johnson High School          $650.00            77.072464   \n",
+       "                      Per Student Budget  Average maths score  \\\n",
+       "school_name                                                     \n",
+       "Rodriguez High School            $637.00            76.842711   \n",
+       "Figueroa High School             $639.00            76.711767   \n",
+       "Huang High School                $655.00            76.629414   \n",
+       "Hernandez High School            $652.00            77.289752   \n",
+       "Johnson High School              $650.00            77.072464   \n",
        "\n",
        "                       Average reading score  % Passing maths  \\\n",
        "school_name                                                     \n",
@@ -1437,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "8a9ab9b2",
    "metadata": {},
    "outputs": [
@@ -1469,7 +1469,7 @@
        "      <th>% Overall Passing</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Spending bin</th>\n",
+       "      <th>Spending range (Per Student)</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -1515,22 +1515,29 @@
        "</div>"
       ],
       "text/plain": [
-       "              Average maths score  Average reading score  % Passing maths  \\\n",
-       "Spending bin                                                                \n",
-       "<$590                       83.46                  83.93            93.46   \n",
-       "\\$590-$630                  81.90                  83.16            87.13   \n",
-       "\\$630-$640                  78.99                  81.92            75.21   \n",
-       ">$640                       77.02                  80.96            66.70   \n",
+       "                              Average maths score  Average reading score  \\\n",
+       "Spending range (Per Student)                                               \n",
+       "<$590                                       83.46                  83.93   \n",
+       "\\$590-$630                                  81.90                  83.16   \n",
+       "\\$630-$640                                  78.99                  81.92   \n",
+       ">$640                                       77.02                  80.96   \n",
        "\n",
-       "              % Passing reading  % Overall Passing  \n",
-       "Spending bin                                        \n",
-       "<$590                     96.61              90.37  \n",
-       "\\$590-$630                92.72              81.42  \n",
-       "\\$630-$640                86.09              65.71  \n",
-       ">$640                     80.68              53.72  "
+       "                              % Passing maths  % Passing reading  \\\n",
+       "Spending range (Per Student)                                       \n",
+       "<$590                                   93.46              96.61   \n",
+       "\\$590-$630                              87.13              92.72   \n",
+       "\\$630-$640                              75.21              86.09   \n",
+       ">$640                                   66.70              80.68   \n",
+       "\n",
+       "                              % Overall Passing  \n",
+       "Spending range (Per Student)                     \n",
+       "<$590                                     90.37  \n",
+       "\\$590-$630                                81.42  \n",
+       "\\$630-$640                                65.71  \n",
+       ">$640                                     53.72  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1552,8 +1559,8 @@
     "spending_data[\"Per Student Budget\"] = school_student_budget\n",
     "\n",
     "#Bin data\n",
-    "spending_data[\"Spending bin\"] = pd.cut(spending_data[\"Per Student Budget\"], bins=spending_bins, labels=spending_bin_names, include_lowest=True)\n",
-    "spending_data_binned = spending_data.groupby(\"Spending bin\").mean()\n",
+    "spending_data[\"Spending range (Per Student)\"] = pd.cut(spending_data[\"Per Student Budget\"], bins=spending_bins, labels=spending_bin_names, include_lowest=True)\n",
+    "spending_data_binned = spending_data.groupby(\"Spending range (Per Student)\").mean()\n",
     "spending_data_binned = spending_data_binned.drop(\"Per Student Budget\", axis=1)\n",
     "spending_data_binned[\"Average maths score\"] = spending_data_binned[\"Average maths score\"].round(2)\n",
     "spending_data_binned[\"Average reading score\"] = spending_data_binned[\"Average reading score\"].round(2)\n",
@@ -1574,7 +1581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "id": "94a82d40",
    "metadata": {},
    "outputs": [
@@ -1657,7 +1664,7 @@
        "Large (2000-5000)         69.963361          82.766634          58.286003  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1787,7 +1794,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f4cfea6",
+   "id": "2f34d7b8",
    "metadata": {},
    "source": [
     "The analysis of the data shows a number of trends, including:\n",
